--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Eternal Rest Cemetery</title>
+  <title>CemeteryHub</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -21,8 +21,8 @@
             </div>
           </div>
           <div>
-            <h1 class="text-xl font-bold leading-tight">Eternal Rest Cemetery</h1>
-            <p class="text-slate-300 text-sm">Location & Services Management</p>
+            <h1 class="text-xl font-bold leading-tight">CemeteryHub</h1>
+            <p class="text-slate-300 text-sm">Lokalizacje grobów & Usługi dodatkowe</p>
           </div>
         </div>
         
@@ -30,7 +30,7 @@
         <nav class="flex flex-wrap items-center gap-3">
           <button class="flex items-center px-4 py-2 text-white hover:bg-slate-800 rounded-md transition-colors">
             <i data-lucide="phone" class="w-4 h-4 mr-2"></i>
-            Contact Us
+            Kontakt
           </button>
           <button class="flex items-center px-4 py-2 text-white hover:bg-slate-800 rounded-md transition-colors">
             <i data-lucide="help-circle" class="w-4 h-4 mr-2"></i>
@@ -38,7 +38,7 @@
           </button>
           <button class="flex items-center px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-md transition-colors shadow-sm">
             <i data-lucide="calendar" class="w-4 h-4 mr-2"></i>
-            Make a Reservation
+            Rezerwacje
           </button>
         </nav>
       </div>
@@ -53,19 +53,19 @@
       <div class="grid w-full max-w-2xl mx-auto grid-cols-4 bg-slate-200 p-1 rounded-lg" id="tabs-nav">
         <button data-tab="search" class="tab-btn flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium bg-white text-slate-950 shadow rounded-md transition-all">
           <i data-lucide="search" class="w-4 h-4"></i>
-          Search
+          Szukaj
         </button>
         <button data-tab="map" class="tab-btn flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-slate-500 hover:text-slate-900 transition-all">
           <i data-lucide="map" class="w-4 h-4"></i>
-          Map
+          Mapa
         </button>
         <button data-tab="services" class="tab-btn flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-slate-500 hover:text-slate-900 transition-all">
           <i data-lucide="wrench" class="w-4 h-4"></i>
-          Services
+          Usługi
         </button>
         <button data-tab="articles" class="tab-btn flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-slate-500 hover:text-slate-900 transition-all">
           <i data-lucide="book-open" class="w-4 h-4"></i>
-          Articles
+          Artykuły
         </button>
       </div>
 
@@ -81,7 +81,7 @@
               <input
                 id="search-input"
                 type="text"
-                placeholder="Search by name..."
+                placeholder="Szukaj według imienia, nazwiska lub numeru grobu..."
                 class="w-full pl-10 pr-4 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
               />
             </div>
@@ -101,19 +101,19 @@
               <div class="flex items-center gap-6">
                 <div class="flex items-center gap-2">
                   <div class="w-8 h-8 bg-slate-200 border-2 border-slate-300 rounded"></div>
-                  <span class="text-slate-600">Available</span>
+                  <span class="text-slate-600">Dostępne</span>
                 </div>
                 <div class="flex items-center gap-2">
                   <div class="w-8 h-8 bg-slate-600 border-2 border-slate-700 rounded"></div>
-                  <span class="text-slate-600">Occupied</span>
+                  <span class="text-slate-600">Zajęte</span>
                 </div>
                 <div class="flex items-center gap-2">
                   <div class="w-8 h-8 bg-blue-600 border-2 border-blue-700 rounded"></div>
-                  <span class="text-slate-600">Selected</span>
+                  <span class="text-slate-600">Wybrane</span>
                 </div>
               </div>
               <button id="clear-selection-btn" class="hidden px-4 py-2 border border-slate-200 rounded-md hover:bg-slate-100 text-sm transition-colors">
-                Clear Selection
+                Wyczyść wybór
               </button>
             </div>
           </div>
@@ -135,8 +135,8 @@
             <div class="flex items-center gap-3 mb-6">
               <i data-lucide="wrench" class="w-6 h-6 text-slate-600"></i>
               <div>
-                <h2 class="text-xl font-semibold text-slate-900">Order Tombstone Services</h2>
-                <p class="text-slate-600">Professional maintenance and restoration services</p>
+                <h2 class="text-xl font-semibold text-slate-900">Zamów usługi nagrobkowe</h2>
+                <p class="text-slate-600">Profesjonalne usługi konserwacyjne i renowacyjne</p>
               </div>
             </div>
 
@@ -148,54 +148,54 @@
             <form id="service-form" class="space-y-6">
               <!-- Contact Info -->
               <div class="space-y-4">
-                <h3 class="font-semibold text-slate-900">Contact Information</h3>
+                <h3 class="font-semibold text-slate-900">Informacje kontaktowe</h3>
                 <div class="space-y-2">
-                  <label class="block text-sm font-medium text-slate-700">Full Name *</label>
-                  <input type="text" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter your full name">
+                  <label class="block text-sm font-medium text-slate-700">Imię i Nazwisko *</label>
+                  <input type="text" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Podaj swoje imię i nazwisko">
                 </div>
                 <div class="grid md:grid-cols-2 gap-4">
                   <div class="space-y-2">
                     <label class="block text-sm font-medium text-slate-700">Email *</label>
-                    <input type="email" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="your@email.com">
+                    <input type="email" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="jan.kowalski@email.com">
                   </div>
                   <div class="space-y-2">
-                    <label class="block text-sm font-medium text-slate-700">Phone *</label>
-                    <input type="tel" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="(555) 123-4567">
+                    <label class="block text-sm font-medium text-slate-700">Telefon *</label>
+                    <input type="tel" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="+48 123 456 789">
                   </div>
                 </div>
               </div>
 
               <!-- Service Selection -->
               <div class="space-y-4">
-                <h3 class="font-semibold text-slate-900">Service Selection</h3>
+                <h3 class="font-semibold text-slate-900">Wybór usługi</h3>
                 <div class="space-y-2">
-                  <label class="block text-sm font-medium text-slate-700">Primary Service *</label>
+                  <label class="block text-sm font-medium text-slate-700">Usługa podstawowa *</label>
                   <select id="service-select" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <option value="">Select a service</option>
+                    <option value="">Wybierz usługę</option>
                     <!-- Options injected via JS -->
                   </select>
                 </div>
                 
                 <div class="space-y-3">
-                  <label class="block text-sm font-medium text-slate-700">Additional Services (Optional)</label>
+                  <label class="block text-sm font-medium text-slate-700">Usługi dodatkowe (opcjonalne)</label>
                   <div id="additional-services-container" class="space-y-2">
                     <!-- Checkboxes injected via JS -->
                   </div>
                 </div>
 
                 <div class="space-y-2">
-                  <label class="block text-sm font-medium text-slate-700">Preferred Service Date *</label>
+                  <label class="block text-sm font-medium text-slate-700">Preferowana data usługi *</label>
                   <input type="date" required class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
 
                 <div class="space-y-2">
-                  <label class="block text-sm font-medium text-slate-700">Additional Notes</label>
-                  <textarea rows="4" class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Any special requests or concerns..."></textarea>
+                  <label class="block text-sm font-medium text-slate-700">Dodatkowe uwagi</label>
+                  <textarea rows="4" class="w-full px-3 py-2 border border-slate-200 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Jakieś specjalne prośby lub uwagi..."></textarea>
                 </div>
               </div>
 
               <button type="submit" id="service-submit-btn" class="w-full py-2 px-4 bg-slate-900 text-white rounded-md hover:bg-slate-800 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
-                Please select a location first
+                Proszę najpierw wybrać lokalizację
               </button>
             </form>
           </div>
@@ -204,8 +204,8 @@
         <!-- Articles Content -->
         <div id="articles" class="tab-content hidden max-w-6xl mx-auto space-y-6">
            <div class="text-center space-y-2">
-            <h2 class="text-2xl font-bold text-slate-900">Tombstone Knowledge Center</h2>
-            <p class="text-slate-600">Expert insights and guides for making informed decisions</p>
+            <h2 class="text-2xl font-bold text-slate-900">Centrum wiedzy</h2>
+            <p class="text-slate-600">Eksperckie spostrzeżenia i wskazówki ułatwiające podejmowanie świadomych decyzji</p>
           </div>
           <div id="articles-grid" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Articles injected via JS -->
@@ -221,32 +221,32 @@
     <div class="container mx-auto px-4">
       <div class="grid md:grid-cols-3 gap-8">
         <div>
-          <h3 class="font-semibold mb-4">Eternal Rest Cemetery</h3>
+          <h3 class="font-semibold mb-4">CemeteryHub</h3>
           <p class="text-slate-300 text-sm">
-            Providing compassionate care and professional services since 1950.
+            Zapewniamy pełną troski opiekę i profesjonalne usługi od 1950 roku.
           </p>
         </div>
         <div>
           <h3 class="font-semibold mb-4">Quick Links</h3>
           <div class="space-y-2 text-sm">
-            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Contact Us</a>
+            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Kontakt</a>
             <a href="#" class="block text-slate-300 hover:text-white transition-colors">FAQ</a>
-            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Make a Reservation</a>
-            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Articles & Resources</a>
+            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Rezerwacje</a>
+            <a href="#" class="block text-slate-300 hover:text-white transition-colors">Artykuły</a>
           </div>
         </div>
         <div>
-          <h3 class="font-semibold mb-4">Contact Information</h3>
+          <h3 class="font-semibold mb-4">Informacje kontaktowe</h3>
           <div class="space-y-2 text-slate-300 text-sm">
-            <p>123 Memorial Drive</p>
-            <p>Springfield, ST 12345</p>
-            <p>(555) 123-4567</p>
-            <p>info@eternalrest.com</p>
+            <p>Al. Jerezolimskie 6,</p>
+            <p>00-375 Warszawa</p>
+            <p>+48 123 231 321</p>
+            <p>info@cemeteryhub.pl</p>
           </div>
         </div>
       </div>
       <div class="border-t border-slate-700 mt-8 pt-8 text-center text-slate-400 text-sm">
-        <p>&copy; 2024 Eternal Rest Cemetery. All rights reserved.</p>
+        <p>&copy; 2024 Cmentarz Wiecznego Spoczynku. Wszelkie prawa zastrzeżone.</p>
       </div>
     </div>
   </footer>
