Mam dość ale to gotowa aplikacja

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CemeteryHub</title>
+  <link rel="icon" type="image/png" href="/assets/images/icon_black.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -17,7 +18,7 @@
         <div class="flex items-center gap-3">
           <div class="relative">
             <div class="w-12 h-12 bg-gradient-to-br from-slate-700 to-slate-900 rounded-lg flex items-center justify-center shadow-lg border border-slate-700">
-              <i data-lucide="map-pin" class="w-6 h-6 text-white absolute"></i>
+              <img src="../assets/images/icon_white.png" alt="CemeteryHub Logo" class="w-10 h-auto">
             </div>
           </div>
           <div>
