--- a/cementery/index.html
+++ b/cementery/index.html
@@ -3,8 +3,9 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
+      <link rel="icon" type="image/png" href="/icon_black.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Cemetery Website Design</title>
+      <title>CemeteryHub</title>
     </head>
 
     <body>
